Some styling Done in Frontend Part

--- a/app/views/todo_items/_todo_item.html.erb
+++ b/app/views/todo_items/_todo_item.html.erb
@@ -1,23 +1,43 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <div class="row clearfix">
+<table class="table table-striped text-center">
+<tbody>
  <% if todo_item.completed? %>
-  <div class="complete">
-   <%= link_to "Mark as Complete", complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch %>
-  </div>
+  <tr>
+  <td>
   <div class="todo_item">
    <p style="opacity: 0.4;"><strike><%= todo_item.content %></strike></p>
   </div>
+  </td>
+  <td><div class="complete">
+   <%= link_to "Mark as Complete", complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch %>
+  </div>
+  </td>
+  <td>
   <div class="trash">
    <%= link_to "Delete", todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: "Are you sure?" } %>
   </div>
+  </td>
+  </tr>
  <% else %>
-  <div class="complete">
-   <%= link_to "Mark as Complete", complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch %>
-  </div>
+  <tr>
+  <td>
   <div class="todo_item">
    <p><%= todo_item.content %></p>
   </div>
+  </td>
+  <td><div class="complete">
+   <%= link_to "Mark as Complete", complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch %>
+  </div>
+  </td>
+  <td>
   <div class="trash">
    <%= link_to "Delete", todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: "Are you sure?" } %>
   </div>
+  </td>
+  </tr>
  <% end %>
+ 
+ </tbody>
+ </table>
 </div>
