--- a/app/views/todo_lists/_form.html.erb
+++ b/app/views/todo_lists/_form.html.erb
@@ -1,5 +1,9 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<table class="table table-striped">
+<tbody>
 <%= form_with(model: todo_list) do |form| %>
   <% if todo_list.errors.any? %>
+  <tr><td>
     <div id="error_explanation">
       <h2><%= pluralize(todo_list.errors.count, "error") %> prohibited this todo_list from being saved:</h2>
 
@@ -9,19 +13,31 @@
         <% end %>
       </ul>
     </div>
+  </td></tr>
   <% end %>
-
+  <tr>
+  <td>
   <div class="field">
     <%= form.label :title %>
     <%= form.text_field :title %>
+  
   </div>
-
+  </td>
+  </tr>
+  <tr><td>
   <div class="field">
     <%= form.label :description %>
     <%= form.text_area :description %>
   </div>
-
+  </td>
+  </tr>
+  <tr><td>
+  <div class="p-3 mb-2 bg-primary text-white">
   <div class="actions">
     <%= form.submit %>
   </div>
+  </div>
+  </td></tr>
 <% end %>
+</tbody>
+</table>
