--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -1,8 +1,10 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 <p id="notice"><%= notice %></p>
 
-<h1>Todo Lists</h1>
+<h1 class="text-center p-3 mb-2 bg-primary text-white">Todo Lists</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Title</th>
@@ -25,5 +27,6 @@
 </table>
 
 <br>
-
+<div class="border border-primary text-center p-3 mb-2 bg-light text-dark">
 <%= link_to 'New Todo List', new_todo_list_path %>
+</div>
