--- a/app/views/todo_lists/new.html.erb
+++ b/app/views/todo_lists/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Todo List</h1>
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<h1 class="text-center p-3 mb-2 bg-primary text-white">New Todo List</h1>
+<div class="text-center">
 <%= render 'form', todo_list: @todo_list %>
-
+</div>
+<h5 class="text-center p-3 mb-2 bg-light text-dark">
 <%= link_to 'Back', todo_lists_path %>
+</h5>
