--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -1,21 +1,23 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <p id="notice"><%= notice %></p>
 
-<p>
+<h1 class="p-3 mb-2 bg-primary text-white text-center">
   <strong>Title:</strong>
   <%= @todo_list.title %>
-</p>
+</h1>
 
-<p>
+<h2 class="p-3 mb-2 bg-secondary text-white text-center">
   <strong>Description:</strong>
   <%= @todo_list.description %>
-</p>
+</h2>
 
 <div id="todo_items_wrapper">
  <%= render @todo_list.todo_items %>
- <div id="form">
+ <div class="text-center p-3 mb-2 bg-primary text-white" id="form">
   <%= render "todo_items/form" %>
  </div>
 </div>
-
+<h5 class="text-center p-3 mb-2 bg-light text-dark">
 <%= link_to 'Edit', edit_todo_list_path(@todo_list) %> |
 <%= link_to 'Back', todo_lists_path %>
+</h5>
